--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Aussenzylinder_RundzylinderRout.cshtml
@@ -2,120 +2,123 @@
 @{
     ViewData["Title"] = "Aussenzylinder Rundzylinder";
 }
+@if (User.IsInRole("admin"))
+{
 
-<div class="text-center ">
-    <div id="myModal_NewSchliessanlagen" class="d-grid gap-3">
-        <div id="routBAR">
-            <div id="Bar">
-                <button class="btn btn-primary"><a href="@Url.Action("Index","Home")">Profil-Doppelzylinder</a></button>
-                <button class="btn btn-secondary"><a href="@Url.Action("Profil_HalbzylinderRout","Home")">Profil-Halbzylinder</a></button>
-                <button class="btn btn-success"><a href="@Url.Action("Profil_KnaufzylinderRout","Home")">Profil-Knaufzylinder</a></button>
-                <button class="btn btn-danger"><a href="@Url.Action("HebelzylinderRout","Home")">Hebelzylinder</a></button>
-                <button class="btn btn-warning"><a href="@Url.Action("VorhangschlossRout","Home")">Vorhangschloss</a></button>
+    <div class="text-center ">
+        <div id="myModal_NewSchliessanlagen" class="d-grid gap-3">
+            <div id="routBAR">
+                <div id="Bar">
+                    <button class="btn btn-primary"><a href="@Url.Action("Index","Home")">Profil-Doppelzylinder</a></button>
+                    <button class="btn btn-secondary"><a href="@Url.Action("Profil_HalbzylinderRout","Home")">Profil-Halbzylinder</a></button>
+                    <button class="btn btn-success"><a href="@Url.Action("Profil_KnaufzylinderRout","Home")">Profil-Knaufzylinder</a></button>
+                    <button class="btn btn-danger"><a href="@Url.Action("HebelzylinderRout","Home")">Hebelzylinder</a></button>
+                    <button class="btn btn-warning"><a href="@Url.Action("VorhangschlossRout","Home")">Vorhangschloss</a></button>
+                </div>
             </div>
+            <div>
+                <h2>New Aussenzylinder Rundzylinder</h2>
+
+                <form asp-action="Create_Aussenzylinder_Rundzylinder" enctype="multipart/form-data" asp-controller="Home">
+
+                    <div id="productMenu">
+                        <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="6" />
+                        <div>
+                            <label asp-for="ImageFile" class="control-label"></label>
+                            <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
+                            <span asp-validation-for="ImageFile" class="text-danger"></span>
+                            @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                        </div>
+                    </div>
+
+                    <div id="product_desciptions">
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Name</label>
+                            <input asp-for="Name" required class="form-control" type="text" name="Name" />
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label> Company Name</label>
+                            <input asp-for="companyName" required class="form-control" type="text" />
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Name System</label>
+                            <input asp-for="NameSystem" required class="form-control" type="text" />
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Descriptions</label>
+                            <textarea asp-for="description" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Cost</label>
+                            <input asp-for="Price" required class="form-control" />
+                        </div>
+
+                        <div id="productOptions">
+                        </div>
+
+                    </div>
+                    <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+                    <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                    <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+
+                    <input type="submit" class="btn btn-success" id="input" value="Create Aussenzylinder Rundzylinder" />
+                </form>
+
+
+            </div>
+
         </div>
         <div>
-            <h2>New Aussenzylinder Rundzylinder</h2>
 
-            <form asp-action="Create_Aussenzylinder_Rundzylinder" enctype="multipart/form-data" asp-controller="Home">
+            <h4 id="input">ALL Aussenzylinder / Rundzylinder</h4>
+            @using (Html.BeginForm("Aussenzylinder_RundzylinderRout", "Home", FormMethod.Get))
+            {
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr id="Table2">
+                            <th>CompanyName</th>
+                            <th>Systeam</th>
+                            <th>Name</th>
+                            <th>Image</th>
+                            <th>Cost</th>
 
-                <div id="productMenu">
-                    <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="6" />
-                    <div>
-                        <label asp-for="ImageFile" class="control-label"></label>
-                        <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                        <span asp-validation-for="ImageFile" class="text-danger"></span>
-                        @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
-                    </div>
-                </div>
 
-                <div id="product_desciptions">
+                            <th>Edit</th>
+                            <th>Options</th>
+                            <th>Delete</th>
 
-                    <div style="margin-bottom: 50px;">
-                        <label>Name</label>
-                        <input asp-for="Name" required class="form-control" type="text" name="Name" />
-                    </div>
+                            @foreach (var item in ViewBag.item)
+                            {
+                                <td id="rowTable" class="table-info">@item.companyName</td>
+                                <td id="rowTable" class="table-info">@item.NameSystem</td>
+                                <td id="rowTable" class="table-info">@item.Name</td>
+                                <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
+                                <td id="rowTable " class="table-info"><h6 id="cost">@item.Price</h6></td>
 
-                    <div style="margin-bottom: 50px;">
-                        <label> Company Name</label>
-                        <input asp-for="companyName" required class="form-control" type="text" />
-                    </div>
 
-                    <div style="margin-bottom: 50px;">
-                        <label>Name System</label>
-                        <input asp-for="NameSystem" required class="form-control" type="text" />
-                    </div>
 
-                    <div style="margin-bottom: 50px;">
-                        <label>Descriptions</label>
-                        <textarea asp-for="description" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
+                                <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Aussenzylinder_Rundzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                                <td id="rowTable" class="table-info">
+                                    <a class="compItem" href="@Url.Action("ProductAussenzylinder","Home", new { item.Id })">
+                                        <img src="@("/Image/options.png")" height="30" width="30" />
+                                    </a>
+                                </td>
+                                <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Aussen","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
+                            }
 
-                    <div style="margin-bottom: 50px;">
-                        <label>Cost</label>
-                        <input asp-for="Price" required class="form-control" />
-                    </div>
+                        </tr>
+                    </tbody>
+                </table>
+            }
 
-                    <div id="productOptions">
-                    </div>
-
-                </div>
-                <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
-                <button id="addInputBtn" type="button" class="btn btn-success">+</button>
-                <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
-
-                <input type="submit" class="btn btn-success" id="input" value="Create Aussenzylinder Rundzylinder" />
-            </form>
-
-          
         </div>
-
     </div>
-    <div>
-
-        <h4 id="input">ALL Aussenzylinder / Rundzylinder</h4>
-        @using (Html.BeginForm("Aussenzylinder_RundzylinderRout", "Home", FormMethod.Get))
-        {
-            <table class="table table-bordered">
-                <tbody>
-                    <tr id="Table2">
-                        <th>CompanyName</th>
-                        <th>Systeam</th>
-                        <th>Name</th>
-                        <th>Image</th>
-                        <th>Cost</th>
-                       
-
-                        <th>Edit</th>
-                        <th>Options</th>
-                        <th>Delete</th>
-
-                        @foreach (var item in ViewBag.item)
-                        {
-                            <td id="rowTable" class="table-info">@item.companyName</td>
-                            <td id="rowTable" class="table-info">@item.NameSystem</td>
-                            <td id="rowTable" class="table-info">@item.Name</td>
-                            <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
-                            <td id="rowTable " class="table-info"><h6 id="cost">@item.Price</h6></td>
-
-
-
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Aussenzylinder_Rundzylinder","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
-                            <td id="rowTable" class="table-info">
-                                <a class="compItem" href="@Url.Action("ProductAussenzylinder","Home", new { item.Id })">
-                                    <img src="@("/Image/options.png")" height="30" width="30" />
-                                </a>
-                            </td>
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Aussen","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
-                        }
-
-                    </tr>
-                </tbody>
-            </table>
-        }
-
-    </div>
-</div>
+}
 
 @section scripts
 {
