--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductHebel.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/ProductHebel.cshtml
@@ -3,52 +3,53 @@
 @{
     ViewData["Title"] = $"ProductHebel/{Model.Id}";
 }
-@Html.HiddenFor(m => m.Id)
-
-
-<div>
-    <div id="productMenu">
-        <div>
-            <img decoding="async" src="@("~/image/"+@Model.ImageName)" asp-append-version="true" width="400px" height="400px" />
-        </div>
-
-        <div id="product_desciptions">
+@if (User.IsInRole("admin"))
+{
+    @Html.HiddenFor(m => m.Id)
+    <div>
+        <div id="productMenu">
             <div>
-                <h3>@Model.Name</h3>
-                <h2><strong id="cost" style="line-height: 200%;">@Model.Price</strong></h2>
-                <h6 style="line-height: 200%; max-width: 400px;">@Model.description</h6>
+                <img decoding="async" src="@("~/image/"+@Model.ImageName)" asp-append-version="true" width="400px" height="400px" />
             </div>
 
-            <div id="cardOptions">
-                @{
-                    int valueCount = 0;
-                }
-                @if (ViewBag.countOptionsQuery > 0)
-                {
-                    @for (int i = 0; i < ViewBag.optionsName.Count; i++)
-                    {
-                        <h6>@ViewBag.optionsName[i]</h6>
+            <div id="product_desciptions">
+                <div>
+                    <h3>@Model.Name</h3>
+                    <h2><strong id="cost" style="line-height: 200%;">@Model.Price</strong></h2>
+                    <h6 style="line-height: 200%; max-width: 400px;">@Model.description</h6>
+                </div>
 
-                        <select class="form-select" id="ProductOptionsSelector">
-
-                            @for (int j = 0; j < ViewBag.countOptionsList[i]; j++)
-                            {
-                                <option id="@valueCount">@ViewBag.optionsValue[valueCount]</option>
-                                valueCount++;
-                            }
-                        </select>
+                <div id="cardOptions">
+                    @{
+                        int valueCount = 0;
                     }
-                }
+                    @if (ViewBag.countOptionsQuery > 0)
+                    {
+                        @for (int i = 0; i < ViewBag.optionsName.Count; i++)
+                        {
+                            <h6>@ViewBag.optionsName[i]</h6>
+
+                            <select class="form-select" id="ProductOptionsSelector">
+
+                                @for (int j = 0; j < ViewBag.countOptionsList[i]; j++)
+                                {
+                                    <option id="@valueCount">@ViewBag.optionsValue[valueCount]</option>
+                                    valueCount++;
+                                }
+                            </select>
+                        }
+                    }
 
 
+                </div>
             </div>
         </div>
     </div>
-</div>
-<div>
-    <a asp-action="Index" class="btn btn-success">Back to List</a>
-</div>
+    <div>
+        <a asp-action="Index" class="btn btn-success">Back to List</a>
+    </div>
 
+}
 <script>
   
     let SystemName = `${"@Model.NameSystem"}`;
