--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/VorhangschlossRout.cshtml
@@ -3,126 +3,129 @@
     ViewData["Title"] = "Vorhangschloss";
 }
 
-<div class="text-center ">
-    <div id="myModal_NewSchliessanlagen" class="d-grid gap-3">
-        <div id="routBAR">
-            <div id="Bar">
-                <button class="btn btn-primary"><a href="@Url.Action("Index","Home")">Profil-Doppelzylinder</a></button>
-                <button class="btn btn-secondary"><a href="@Url.Action("Profil_HalbzylinderRout","Home")">Profil-Halbzylinder</a></button>
-                <button class="btn btn-success"><a href="@Url.Action("Profil_KnaufzylinderRout","Home")">Profil-Knaufzylinder</a></button>
-                <button class="btn btn-danger"><a href="@Url.Action("HebelzylinderRout","Home")">Hebelzylinder</a></button>
-                <button class="btn btn-info"><a href="@Url.Action("Aussenzylinder_RundzylinderRout","Home")">Aussenzylinder / Rundzylinder</a></button>
+@if (User.IsInRole("admin"))
+{
+    <div class="text-center ">
+        <div id="myModal_NewSchliessanlagen" class="d-grid gap-3">
+            <div id="routBAR">
+                <div id="Bar">
+                    <button class="btn btn-primary"><a href="@Url.Action("Index","Home")">Profil-Doppelzylinder</a></button>
+                    <button class="btn btn-secondary"><a href="@Url.Action("Profil_HalbzylinderRout","Home")">Profil-Halbzylinder</a></button>
+                    <button class="btn btn-success"><a href="@Url.Action("Profil_KnaufzylinderRout","Home")">Profil-Knaufzylinder</a></button>
+                    <button class="btn btn-danger"><a href="@Url.Action("HebelzylinderRout","Home")">Hebelzylinder</a></button>
+                    <button class="btn btn-info"><a href="@Url.Action("Aussenzylinder_RundzylinderRout","Home")">Aussenzylinder / Rundzylinder</a></button>
+                </div>
             </div>
+            <div>
+                <h2>New Vorhangschloss</h2>
+
+                <form asp-action="Create_Vorhangschloss" enctype="multipart/form-data" asp-controller="Home">
+
+                    <div id="productMenu">
+                        <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="5" />
+                        <div>
+                            <label asp-for="ImageFile" class="control-label"></label>
+                            <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
+                            <span asp-validation-for="ImageFile" class="text-danger"></span>
+                            @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
+                        </div>
+                    </div>
+
+                    <div id="product_desciptions">
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Name</label>
+                            <input asp-for="Name" required class="form-control" type="text" name="Name" />
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label> Company Name</label>
+                            <input asp-for="companyName" required class="form-control" type="text" />
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Name System</label>
+                            <input asp-for="NameSystem" required class="form-control" type="text" />
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Descriptions</label>
+                            <textarea asp-for="description" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+
+                        <div style="margin-bottom: 50px;">
+                            <label>Cost</label>
+                            <input asp-for="Price" class="form-control" />
+                        </div>
+                        <h1>Size  <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
+                        <div id="Aussen_Innen_ProfilDopel">
+
+                            <div id="AussenProfilDopel">
+                                <input type="number" placeholder="Size" required class="form-control" step="0.01" name="aussen" />
+
+                            </div>
+                            <div id="costedSize">
+                                <input type="number" placeholder="CostSize" required class="form-control" step="0.01" name="costSize" />
+                            </div>
+                        </div>
+                        <div id="productOptions">
+                        </div>
+
+                    </div>
+                    <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
+                    <button id="addInputBtn" type="button" class="btn btn-success">+</button>
+                    <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
+                    <input type="submit" class="btn btn-success" id="input" value="Create Vorhangschloss" />
+                </form>
+
+
+
+            </div>
+
         </div>
         <div>
-            <h2>New Vorhangschloss</h2>
 
-            <form asp-action="Create_Vorhangschloss" enctype="multipart/form-data" asp-controller="Home">
+            <h4 id="input">ALL Vorhangschloss</h4>
+            @using (Html.BeginForm("VorhangschlossRout", "Home", FormMethod.Get))
+            {
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr id="Table2">
+                            <th>CompanyName</th>
+                            <th>Systeam</th>
+                            <th>Name</th>
+                            <th>Image</th>
+                            <th>Cost</th>
 
-                <div id="productMenu">
-                    <input style="display:none" asp-for="schliessanlagenId" class="form-control" type="text" value="5" />
-                    <div>
-                        <label asp-for="ImageFile" class="control-label"></label>
-                        <input asp-for="ImageFile" class="btn btn-success" accept="image/*" />
-                        <span asp-validation-for="ImageFile" class="text-danger"></span>
-                        @Html.ValidationMessageFor(m => m.ImageFile, "", new { @class = "error" })
-                    </div>
-                </div>
+                            <th>Edit</th>
+                            <th>Options</th>
+                            <th>Delete</th>
 
-                <div id="product_desciptions">
+                            @foreach (var item in ViewBag.item)
+                            {
+                                <td id="rowTable" class="table-info">@item.companyName</td>
+                                <td id="rowTable" class="table-info">@item.NameSystem</td>
+                                <td id="rowTable" class="table-info">@item.Name</td>
+                                <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
+                                <td id="rowTable " class="table-info"><h6 id="cost">@item.Price</h6></td>
 
-                    <div style="margin-bottom: 50px;">
-                        <label>Name</label>
-                        <input asp-for="Name" required class="form-control" type="text" name="Name" />
-                    </div>
+                                <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Vorhangschloss","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
+                                <td id="rowTable" class="table-info">
+                                    <a class="compItem" href="@Url.Action("ProductVorhan","Home", new { item.Id })">
+                                        <img src="@("/Image/options.png")" height="30" width="30" />
+                                    </a>
+                                </td>
+                                <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Vorhan","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
+                            }
 
-                    <div style="margin-bottom: 50px;">
-                        <label> Company Name</label>
-                        <input asp-for="companyName" required class="form-control" type="text" />
-                    </div>
+                        </tr>
+                    </tbody>
+                </table>
+            }
 
-                    <div style="margin-bottom: 50px;">
-                        <label>Name System</label>
-                        <input asp-for="NameSystem" required class="form-control" type="text" />
-                    </div>
-
-                    <div style="margin-bottom: 50px;">
-                        <label>Descriptions</label>
-                        <textarea asp-for="description" required class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div>
-
-                    <div style="margin-bottom: 50px;">
-                        <label>Cost</label>
-                        <input asp-for="Price" class="form-control" />
-                    </div>
-                    <h1>Size  <input id="addAussen_Innen" class="btn btn-success" type="button" value="+" /><input id="addAussen_Innen_remove" class="btn btn-danger" type="button" value="-" /></h1>
-                    <div id="Aussen_Innen_ProfilDopel">
-
-                        <div id="AussenProfilDopel">
-                            <input type="number" placeholder="Size" required class="form-control" step="0.01" name="aussen" />
-                            
-                        </div>
-                        <div id="costedSize">
-                            <input type="number" placeholder="CostSize" required class="form-control" step="0.01" name="costSize" />
-                        </div>
-                    </div>
-                    <div id="productOptions">
-                    </div>
-
-                </div>
-                <button id="createBlockBtn" type="button" class="btn btn-success">Add Options</button>
-                <button id="addInputBtn" type="button" class="btn btn-success">+</button>
-                <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
-                <input type="submit" class="btn btn-success" id="input" value="Create Vorhangschloss" />
-            </form>
-
-           
-       
         </div>
-
     </div>
-    <div>
-
-        <h4 id="input">ALL Vorhangschloss</h4>
-        @using (Html.BeginForm("VorhangschlossRout", "Home", FormMethod.Get))
-        {
-            <table class="table table-bordered">
-                <tbody>
-                    <tr id="Table2">
-                        <th>CompanyName</th>
-                        <th>Systeam</th>
-                        <th>Name</th>
-                        <th>Image</th>
-                        <th>Cost</th>
-
-                        <th>Edit</th>
-                        <th>Options</th>
-                        <th>Delete</th>
-
-                        @foreach (var item in ViewBag.item)
-                        {
-                            <td id="rowTable" class="table-info">@item.companyName</td>
-                            <td id="rowTable" class="table-info">@item.NameSystem</td>
-                            <td id="rowTable" class="table-info">@item.Name</td>
-                            <td id="rowTable" class="table-info"> <img decoding="async" src="@("~/image/"+@item.ImageName)" asp-append-version="true" width="50px" height="50px" /></td>
-                            <td id="rowTable " class="table-info"><h6 id="cost">@item.Price</h6></td>
-
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Edit_Vorhangschloss","Home", new { item.Id })"><img src="@("/Image/edit-tools.png")" height="30" width="30" /></a></td>
-                            <td id="rowTable" class="table-info">
-                                <a class="compItem" href="@Url.Action("ProductVorhan","Home", new { item.Id })">
-                                    <img src="@("/Image/options.png")" height="30" width="30" />
-                                </a>
-                            </td>
-                            <td id="rowTable" class="table-info"><a href="@Url.Action("Delete_Vorhan","Home", new { item.Id })"><img src="@("/Image/entfernen.png")" height="30" width="30" /></a></td>
-                        }
-
-                    </tr>
-                </tbody>
-            </table>
-        }
-
-    </div>
-</div>
+}
 
 @section scripts
 {
