--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/IndexKonfigurator.cshtml
@@ -21,7 +21,7 @@
       @*   <button type="button" class="btn btn-secondary">3. Parameter einstellen</button> *@
     </div>
     <div style="display:flex;gap: 20px;box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;align-items: center;">
-        <button onclick="hilfe()" style="border:none"><img src="/Image/help.png" width="60" hight="60"/></button>
+        <button onclick="hilfe()" id="hilfeImg" style="border:none"><img src="/Image/help.png" width="60" hight="60" /></button>
         <h2>Füllen Sie den Konfigurator mit Daten aus!</h2>
     </div>
 
